--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "chart.js": "^3.8.0",
+    "dotenv": "^16.3.1",
+    "firebase": "^10.4.0",
     "formik": "^2.2.9",
+    "mongoose": "^7.5.3",
     "react": "^18.2.0",
     "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.2.0",
