--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "mit-bad-bank",
   "version": "0.1.0",
   "private": true,
+  "type": "commonjs",
+  "main": "index.js",
   "dependencies": {
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
@@ -10,18 +12,29 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "browserify-zlib": "^0.2.0",
     "chart.js": "^3.8.0",
+    "cors": "^2.8.5",
+    "crypto-browserify": "^3.12.0",
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "firebase": "^10.4.0",
     "formik": "^2.2.9",
+    "mongodb": "^6.1.0",
     "mongoose": "^7.5.3",
+    "node": "^16.20.2",
+    "path-browserify": "^1.0.1",
+    "querystring-es3": "^0.2.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.0.5",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
     "web-vitals": "^2.1.4",
+    "webpack": "^4.47.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
